// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a login button is clicked email signup button is pressed loading wheel to be rendered 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Flex
    align="center"
    justify="center"
    value={1}
  >
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/missionHubLogoWords.png",
          }
        }
      />
    </Flex>
    <Flex
      align="center"
      justify="start"
      self="stretch"
      style={
        Object {
          "backgroundColor": "#007398",
          "paddingHorizontal": 30,
        }
      }
      value={1.2}
    >
      <Flex
        align="center"
        direction="column"
        self="stretch"
        value={4}
      >
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "paddingTop": 2,
            }
          }
          name="facebookButton"
          onPress={[Function]}
          pill={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#52C5DC",
              "borderWidth": 1,
              "height": 48,
              "margin": 8,
              "width": 670,
            }
          }
        >
          <Flex
            direction="row"
          >
            <Icon
              name="facebookIcon"
              size={21}
              style={
                Object {
                  "marginRight": 10,
                }
              }
              type="MissionHub"
            />
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "paddingTop": 2,
                }
              }
            >
              SIGN UP WITH FACEBOOK
            </MyText>
          </Flex>
        </Button>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "paddingTop": 2,
            }
          }
          name="emailButton"
          onPress={[Function]}
          pill={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#52C5DC",
              "borderWidth": 1,
              "height": 48,
              "margin": 8,
              "width": 670,
            }
          }
        >
          <Flex
            direction="row"
          >
            <Icon
              name="emailIcon2"
              size={21}
              style={
                Object {
                  "marginRight": 10,
                }
              }
              type="MissionHub"
            />
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "paddingTop": 2,
                }
              }
            >
              SIGN UP WITH EMAIL
            </MyText>
          </Flex>
        </Button>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "paddingTop": 2,
            }
          }
          name="signUpLater"
          onPress={[Function]}
          pill={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#52C5DC",
              "borderWidth": 1,
              "height": 48,
              "margin": 8,
              "width": 670,
            }
          }
          text="SIGN UP LATER"
        />
        <Translate(TosPrivacy)
          flexProps={
            Object {
              "justify": undefined,
              "value": undefined,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        direction="row"
        value={1}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#52C5DC",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "marginBottom": 20,
              "marginRight": 10,
              "paddingTop": 2,
            }
          }
        >
          ALREADY A MEMBER?
        </MyText>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "marginBottom": 20,
              "paddingTop": 2,
            }
          }
          name="loginButton"
          onPress={[Function]}
          text="SIGN IN"
          type="transparent"
        />
      </Flex>
    </Flex>
    <Connect(BackButton)
      absolute={true}
    />
  </Flex>
  <LoadingWheel />
</Flex>
`;

exports[`a login button is clicked facebook signup button is pressed loading wheel to be rendered 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Flex
    align="center"
    justify="center"
    value={1}
  >
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/missionHubLogoWords.png",
          }
        }
      />
    </Flex>
    <Flex
      align="center"
      justify="start"
      self="stretch"
      style={
        Object {
          "backgroundColor": "#007398",
          "paddingHorizontal": 30,
        }
      }
      value={1.2}
    >
      <Flex
        align="center"
        direction="column"
        self="stretch"
        value={4}
      >
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "paddingTop": 2,
            }
          }
          name="facebookButton"
          onPress={[Function]}
          pill={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#52C5DC",
              "borderWidth": 1,
              "height": 48,
              "margin": 8,
              "width": 670,
            }
          }
        >
          <Flex
            direction="row"
          >
            <Icon
              name="facebookIcon"
              size={21}
              style={
                Object {
                  "marginRight": 10,
                }
              }
              type="MissionHub"
            />
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "paddingTop": 2,
                }
              }
            >
              SIGN UP WITH FACEBOOK
            </MyText>
          </Flex>
        </Button>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "paddingTop": 2,
            }
          }
          name="emailButton"
          onPress={[Function]}
          pill={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#52C5DC",
              "borderWidth": 1,
              "height": 48,
              "margin": 8,
              "width": 670,
            }
          }
        >
          <Flex
            direction="row"
          >
            <Icon
              name="emailIcon2"
              size={21}
              style={
                Object {
                  "marginRight": 10,
                }
              }
              type="MissionHub"
            />
            <MyText
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 14,
                  "fontWeight": "500",
                  "letterSpacing": 1.5,
                  "paddingTop": 2,
                }
              }
            >
              SIGN UP WITH EMAIL
            </MyText>
          </Flex>
        </Button>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "paddingTop": 2,
            }
          }
          name="signUpLater"
          onPress={[Function]}
          pill={true}
          style={
            Object {
              "backgroundColor": "transparent",
              "borderColor": "#52C5DC",
              "borderWidth": 1,
              "height": 48,
              "margin": 8,
              "width": 670,
            }
          }
          text="SIGN UP LATER"
        />
        <Translate(TosPrivacy)
          flexProps={
            Object {
              "justify": undefined,
              "value": undefined,
            }
          }
        />
      </Flex>
      <Flex
        align="end"
        direction="row"
        value={1}
      >
        <MyText
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#52C5DC",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "marginBottom": 20,
              "marginRight": 10,
              "paddingTop": 2,
            }
          }
        >
          ALREADY A MEMBER?
        </MyText>
        <Button
          buttonTextStyle={
            Object {
              "color": "#ffffff",
              "fontSize": 14,
              "fontWeight": "500",
              "letterSpacing": 1.5,
              "marginBottom": 20,
              "paddingTop": 2,
            }
          }
          name="loginButton"
          onPress={[Function]}
          text="SIGN IN"
          type="transparent"
        />
      </Flex>
    </Flex>
    <Connect(BackButton)
      absolute={true}
    />
  </Flex>
</Flex>
`;

exports[`renders correctly with upgrade 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/missionHubLogoWords.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#007398",
            "paddingHorizontal": 30,
          },
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flex": 1.2,
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 4,
              "flexDirection": "column",
            },
          ]
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits="button"
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#52C5DC",
                  "borderWidth": 1,
                  "height": 48,
                  "margin": 8,
                  "width": 670,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 21,
                      },
                      Object {
                        "marginRight": 10,
                      },
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "paddingTop": 2,
                    },
                  ]
                }
              >
                SIGN UP WITH FACEBOOK
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits="button"
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#52C5DC",
                  "borderWidth": 1,
                  "height": 48,
                  "margin": 8,
                  "width": 670,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 21,
                      },
                      Object {
                        "marginRight": 10,
                      },
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "paddingTop": 2,
                    },
                  ]
                }
              >
                SIGN UP WITH EMAIL
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 38,
                "marginTop": 10,
              },
              Object {
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#ffffff",
                  "fontSize": 12,
                  "paddingHorizontal": 3,
                  "textAlign": "center",
                },
              ]
            }
          >
            By creating your MissionHub account you agree to our
          </Text>
          <View
            style={
              Array [
                Object {},
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits="button"
              accessible={true}
              collapsable={undefined}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "fontSize": 18,
                          "fontWeight": "500",
                          "letterSpacing": 1.5,
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#ffffff",
                          "fontSize": 12,
                          "fontWeight": "normal",
                          "letterSpacing": 0,
                          "paddingHorizontal": 3,
                          "textAlign": "center",
                          "textDecorationLine": "underline",
                        },
                      ],
                    ]
                  }
                >
                  Terms of Service
                </Text>
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "paddingHorizontal": 3,
                    "textAlign": "center",
                  },
                ]
              }
            >
              and
            </Text>
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits="button"
              accessible={true}
              collapsable={undefined}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "fontSize": 18,
                          "fontWeight": "500",
                          "letterSpacing": 1.5,
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#ffffff",
                          "fontSize": 12,
                          "fontWeight": "normal",
                          "letterSpacing": 0,
                          "paddingHorizontal": 3,
                          "textAlign": "center",
                          "textDecorationLine": "underline",
                        },
                      ],
                    ]
                  }
                >
                  Privacy Policy
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Array [
            null,
            Object {
              "left": 5,
              "position": "absolute",
              "top": 25,
            },
          ],
          Object {
            "alignItems": "flex-start",
            "alignSelf": "flex-start",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              null,
              Object {},
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 18,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {},
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly without upgrade 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#007398",
        "flex": 1,
        "justifyContent": "center",
      },
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Object {},
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
        ]
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/missionHubLogoWords.png",
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#007398",
            "paddingHorizontal": 30,
          },
          Object {
            "alignItems": "center",
            "alignSelf": "stretch",
            "flex": 1.2,
            "justifyContent": "flex-start",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "center",
              "alignSelf": "stretch",
              "flex": 4,
              "flexDirection": "column",
            },
          ]
        }
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits="button"
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#52C5DC",
                  "borderWidth": 1,
                  "height": 48,
                  "margin": 8,
                  "width": 670,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 21,
                      },
                      Object {
                        "marginRight": 10,
                      },
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "paddingTop": 2,
                    },
                  ]
                }
              >
                SIGN UP WITH FACEBOOK
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits="button"
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#52C5DC",
                  "borderWidth": 1,
                  "height": 48,
                  "margin": 8,
                  "width": 670,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {},
                  Object {
                    "flexDirection": "row",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                allowFontScaling={false}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": undefined,
                      "fontSize": 12,
                    },
                    Array [
                      Object {
                        "color": "#ffffff",
                      },
                      Object {
                        "fontSize": 21,
                      },
                      Object {
                        "marginRight": 10,
                      },
                    ],
                    Object {
                      "fontFamily": "icomoon",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                  ]
                }
              >
                
              </Text>
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Array [
                    Object {
                      "color": "#505256",
                    },
                    Object {
                      "fontFamily": "SourceSansPro-Regular",
                    },
                    Object {
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "paddingTop": 2,
                    },
                  ]
                }
              >
                SIGN UP WITH EMAIL
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits="button"
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 0,
                  "borderWidth": 0,
                  "height": 60,
                  "justifyContent": "center",
                  "margin": 0,
                  "paddingHorizontal": 20,
                  "paddingVertical": 10,
                },
                null,
                Object {
                  "backgroundColor": "transparent",
                  "borderColor": "#52C5DC",
                  "borderWidth": 1,
                  "height": 48,
                  "margin": 8,
                  "width": 670,
                },
                Object {
                  "borderRadius": 50,
                },
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 18,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "paddingTop": 2,
                    },
                  ],
                ]
              }
            >
              SIGN UP LATER
            </Text>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "marginBottom": 38,
                "marginTop": 10,
              },
              Object {
                "flexDirection": "column",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#505256",
                },
                Object {
                  "fontFamily": "SourceSansPro-Regular",
                },
                Object {
                  "color": "#ffffff",
                  "fontSize": 12,
                  "paddingHorizontal": 3,
                  "textAlign": "center",
                },
              ]
            }
          >
            By creating your MissionHub account you agree to our
          </Text>
          <View
            style={
              Array [
                Object {},
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                },
              ]
            }
          >
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits="button"
              accessible={true}
              collapsable={undefined}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "fontSize": 18,
                          "fontWeight": "500",
                          "letterSpacing": 1.5,
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#ffffff",
                          "fontSize": 12,
                          "fontWeight": "normal",
                          "letterSpacing": 0,
                          "paddingHorizontal": 3,
                          "textAlign": "center",
                          "textDecorationLine": "underline",
                        },
                      ],
                    ]
                  }
                >
                  Terms of Service
                </Text>
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Object {
                    "color": "#ffffff",
                    "fontSize": 12,
                    "paddingHorizontal": 3,
                    "textAlign": "center",
                  },
                ]
              }
            >
              and
            </Text>
            <View
              accessibilityComponentType={undefined}
              accessibilityLabel={undefined}
              accessibilityTraits="button"
              accessible={true}
              collapsable={undefined}
              hasTVPreferredFocus={undefined}
              hitSlop={undefined}
              isTVSelectable={true}
              nativeID={undefined}
              onLayout={undefined}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "opacity": 1,
                }
              }
              testID={undefined}
              tvParallaxProperties={undefined}
            >
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                    },
                    null,
                    Object {},
                    null,
                  ]
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#505256",
                      },
                      Object {
                        "fontFamily": "SourceSansPro-Regular",
                      },
                      Array [
                        Object {
                          "backgroundColor": "rgba(0,0,0,0)",
                          "color": "#ffffff",
                          "fontSize": 18,
                          "fontWeight": "500",
                          "letterSpacing": 1.5,
                          "textAlign": "center",
                        },
                        Object {
                          "color": "#ffffff",
                          "fontSize": 12,
                          "fontWeight": "normal",
                          "letterSpacing": 0,
                          "paddingHorizontal": 3,
                          "textAlign": "center",
                          "textDecorationLine": "underline",
                        },
                      ],
                    ]
                  }
                >
                  Privacy Policy
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {},
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "color": "#52C5DC",
                "fontSize": 14,
                "fontWeight": "500",
                "letterSpacing": 1.5,
                "marginBottom": 20,
                "marginRight": 10,
                "paddingTop": 2,
              },
            ]
          }
        >
          ALREADY A MEMBER?
        </Text>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits="button"
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                },
                null,
                Object {},
                null,
              ]
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#505256",
                  },
                  Object {
                    "fontFamily": "SourceSansPro-Regular",
                  },
                  Array [
                    Object {
                      "backgroundColor": "rgba(0,0,0,0)",
                      "color": "#ffffff",
                      "fontSize": 18,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "#ffffff",
                      "fontSize": 14,
                      "fontWeight": "500",
                      "letterSpacing": 1.5,
                      "marginBottom": 20,
                      "paddingTop": 2,
                    },
                  ],
                ]
              }
            >
              SIGN IN
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        Array [
          Array [
            null,
            Object {
              "left": 5,
              "position": "absolute",
              "top": 25,
            },
          ],
          Object {
            "alignItems": "flex-start",
            "alignSelf": "flex-start",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits="button"
        accessible={true}
        collapsable={undefined}
        hasTVPreferredFocus={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              null,
              Object {},
              null,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": undefined,
                  "fontSize": 12,
                },
                Array [
                  Object {
                    "color": "#ffffff",
                  },
                  Object {
                    "fontSize": 18,
                  },
                  Array [
                    Object {
                      "margin": 10,
                    },
                    Object {},
                  ],
                ],
                Object {
                  "fontFamily": "icomoon",
                  "fontStyle": "normal",
                  "fontWeight": "normal",
                },
              ]
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
